k3s/services/longhorn/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhron-ingress
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - longhorn.homelab.kevin.lutzer.ca
    secretName: longhorn-homelab-kevin-lutzer-ca-tls
  rules:
  - host: longhorn.homelab.kevin.lutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
